add security and vulnerability check layer  🐿 v2.12.3

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
       - checkout
 
       - *restore_node_dependencies
-
+      - run: snyk test
       - run:
           name: Install dependencies
           command: npm install
