--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "url": "https://github.com/Financial-Times/ip-envoy-lucidimporter/issues"
   },
   "homepage": "https://github.com/Financial-Times/ip-envoy-lucidimporter#readme",
+  "scripts": {
+    "prepare": "snyk protect"
+  },
   "devDependencies": {
     "@financial-times/secret-squirrel": "^2.12.3",
     "jest": "^23.6.0"
@@ -24,6 +27,7 @@
   "dependencies": {
     "husky": "^2.4.0",
     "lodash": "^4.17.10",
+    "snyk": "^1.174.1",
     "util": "^0.12.0"
   },
   "husky": {
